k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: someday94/goilerplate-api:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
