k8s/pgAdmin4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: someday94/goilerplate-pgadmin4:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
