k8s/pgAdmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  type: ClusterIP
  selector:
    app: pgadmin4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
