k8s/pgadmin4.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  type: ClusterIP
  selector:
    app: pgadmin4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: someday94/goilerplate-pgadmin4:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
