k8s/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "*.goilerplate.com"
    secretName: secret-tls
  rules:
  - host: pgadmin4.goilerplate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4
            port:
              number: 80
  - host: api.goilerplate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
